# F21BC-Coursework

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  __main__.py
src/Experimemts/Task 4/: BaseLineTrain.ipynb  OptimizedTrain-multipleruns.ipynb
src/Experimemts/Task 5 - Experiment/ANN architecture effects/: 1. Layers-effect.ipynb  2. Neurons-effect.ipynb  3. ActivationFunction-effect.ipynb
src/Experimemts/Task 5 - Experiment/PSO architecture effects/: 2.Interia variation (alpha).ipynb  3.Cognitive variation (beta).ipynb  4.Social variation (gama).ipynb  5.Global Influence (delta).ipynb  6.bounds.ipynb  7. v_clamp.ipynb  8. topology.ipynb  9. boundary_modes.ipynb
src/Gui/: Gui.py  __init__.py
src/Sanity_Check/: ann_pso_test.py  ann_test.py  pso_test.py
src/ann/: __init__.py  activation.py  builder.py  config.py  layer.py  loss.py  network.py
src/ann_pso/: __init__.py  ann_pso.py
src/notebooks/Task 4/: BaseLineTrain.ipynb  OptimizedTrain-multipleruns.ipynb  OptimizedTrain.ipynb
src/notebooks/Task 5 - Experiment/ANN architecture effects/: 1. Layers-effect.ipynb  2. Neurons-effect.ipynb  3. ActivationFunction-effect.ipynb
src/notebooks/Task 5 - Experiment/PSO architecture effects/: 1. swarm-size and iterations.ipynb  2.Cognitive variation (alpha).ipynb  2.Interia variation (alpha).ipynb  3.Cognitive variation (beta).ipynb  3.Social variation (beta).ipynb  (+8 more)
src/pso/: __init__.py  boundary.py  config.py  core.py  topology.py
src/train/: __init__.py  config.py  data.py  evaluate.py  pipeline.py  plots.py  preprocess.py  trainer.py
