[tool.poetry]
name = "concrete-ann-pso"
version = "0.1.0"
description = "ANN + PSO project with plotting"
authors = ["Your Name Bhagya, Saji"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# Core libs
numpy = "^1.26.0"

# For evaluation & metrics (e.g. mean_absolute_error)
scikit-learn = "^1.5.0"

# For plots.py
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
